made it responsive

--- a/Avinash/event_calendar.html
+++ b/Avinash/event_calendar.html
@@ -323,7 +323,7 @@
     <div id="content">
         <div class="content-container">
             <div class="user-img-container">
-                <img src="assets/images/profile.png" alt="Profile">
+                <div class="profile"></div>
                 <h3>John Wayne</h3>
             </div>
             <div class="flex-center-container">
